refactor: 테스트 코드에서 불필요한 `entityCache.clear` 호출 제거
- `TimebasedUUIDBase62TableTest`, `KsuidMillisTableTest`, `KsuidTableTest`, `SnowflakeIdTableTest`, `TimebasedUUIDTableTest`에서 중복된 `entityCache.clear` 호출 제거
- `flushCache` 호출 또한 일부 테스트에서 제거
- `MovieSuspendedServiceTest`에서 `newSuspendedTransaction`에 missing `coroutineContext` 추가
- Gradle 빌드 스크립트 수정
  - `kotlinDaemonJvmArgs` 옵션 추가
  - 테스트 JVM 옵션에 `-XX:+EnableDynamicAgentLoading` 추가

Signed-off-by: Sunghyouk Bae <sunghyouk.bae@gmail.com>